--- a/src/app/includes/dashboard/top-navbar/top-navbar.component.html
+++ b/src/app/includes/dashboard/top-navbar/top-navbar.component.html
@@ -1,5 +1,5 @@
 <ngx-spinner class="text-white">Now Loading...</ngx-spinner>
-<mat-toolbar color="accent">
+<mat-toolbar>
   <button mat-icon-button (click)="sideNav.toggle()">
     <mat-icon>apps</mat-icon>
   </button>
@@ -8,7 +8,7 @@
   </div>
   <div class="logo">MSE</div>
   <div class="search-bar-wrapper hidden-xs">
-    <button mat-icon-button>
+    <button mat-icon-button class="search-btn">
       <mat-icon>search</mat-icon>
     </button>
     <label>
@@ -21,9 +21,6 @@
     <button mat-button class="text-left pl-14 hidden-md">
       <mat-icon matBadge="10" matBadgeColor="warn" class="button">mail</mat-icon>
     </button>
-    <button mat-button class="text-left pl-14 hidden-md" (click)="notification.toggle()">
-      <mat-icon class="button">create_new_folder</mat-icon>
-    </button>
   </div>
 </mat-toolbar>
 
@@ -34,61 +31,65 @@
 </mat-autocomplete>
 
 <mat-menu #menu="matMenu">
-  <button mat-menu-item class="shown-xs">Notification</button>
   <button mat-menu-item class="shown-xs">Messages</button>
   <button mat-menu-item (click)="logout()">Log out</button>
 </mat-menu>
 
-<mat-sidenav-container class="side-menu">
-  <mat-sidenav #sideNav [mode]="mobileQuery.matches ? 'over' : 'side'" [opened]="mobileQuery.matches ? 'false' : 'true'">
-    <mat-nav-list>
-      <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/maindashboard']">
-        <mat-icon>dashboard_outlined</mat-icon>
-        <span class="menu-item-title">Home</span>
-      </a>
-      <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/newsfeed']">
-        <mat-icon>menu_book</mat-icon>
-        <span class="menu-item-title">News Feed</span>
-      </a>
+  <mat-sidenav-container>
+    <mat-sidenav #sideNav [mode]="mobileQuery.matches ? 'over' : 'side'" [opened]="mobileQuery.matches ? 'false' : 'true'">
+      <mat-nav-list>
+        <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/overview']">
+          <mat-icon>widgets</mat-icon>
+          <span class="menu-item-title">Overview</span>
+        </a>
+        <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/maindashboard']">
+          <mat-icon>dashboard_outlined</mat-icon>
+          <span class="menu-item-title">Home</span>
+        </a>
+        <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/newsfeed']">
+          <mat-icon>menu_book</mat-icon>
+          <span class="menu-item-title">News Feed</span>
+        </a>
 
-      <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/howtopage']">
-        <mat-icon>storage</mat-icon>
-        <span class="menu-item-title">How To Invest</span>
-      </a>
+        <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/howtopage']">
+          <mat-icon>storage</mat-icon>
+          <span class="menu-item-title">How To Invest</span>
+        </a>
 
-      <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/portfolio']">
-        <mat-icon>group</mat-icon>
-        <span class="menu-item-title">Portfolio</span>
-      </a>
+        <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/portfolio']">
+          <mat-icon>group</mat-icon>
+          <span class="menu-item-title">Portfolio</span>
+        </a>
 
-      <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/catalogue']">
-        <mat-icon>monochrome_photos</mat-icon>
-        <span class="menu-item-title">Catalogue</span>
-      </a>
-      <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/userpage']">
-        <mat-icon>group_add</mat-icon>
-        <span class="menu-item-title">Userpage</span>
-      </a>
-      <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/faqs']">
-        <mat-icon>camera</mat-icon>
-        <span class="menu-item-title">FAQs</span>
-      </a>
-      <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/about']">
-        <mat-icon>folder_shared</mat-icon>
-        <span class="menu-item-title">About Us</span>
-      </a>
-      <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/terms']">
-        <mat-icon>chrome_reader_mode</mat-icon>
-        <span class="menu-item-title">T's and C's</span>
-      </a>
-      <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/contact']">
-        <mat-icon>contact_phone</mat-icon>
-        <span class="menu-item-title">Contact Us</span>
-      </a>
-    </mat-nav-list>
-  </mat-sidenav>
+        <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/catalogue']">
+          <mat-icon>monochrome_photos</mat-icon>
+          <span class="menu-item-title">Catalogue</span>
+        </a>
+        <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/userpage']">
+          <mat-icon>group_add</mat-icon>
+          <span class="menu-item-title">Userpage</span>
+        </a>
+        <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/faqs']">
+          <mat-icon>camera</mat-icon>
+          <span class="menu-item-title">FAQs</span>
+        </a>
+        <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/about']">
+          <mat-icon>folder_shared</mat-icon>
+          <span class="menu-item-title">About Us</span>
+        </a>
+        <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/terms']">
+          <mat-icon>chrome_reader_mode</mat-icon>
+          <span class="menu-item-title">T's and C's</span>
+        </a>
+        <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/contact']">
+          <mat-icon>contact_phone</mat-icon>
+          <span class="menu-item-title">Contact Us</span>
+        </a>
+      </mat-nav-list>
+    </mat-sidenav>
 
-  <mat-sidenav-content>
-    <router-outlet></router-outlet>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+    <mat-sidenav-content>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+
