--- a/src/app/pages/dashboard/overview/overview.component.css
+++ b/src/app/pages/dashboard/overview/overview.component.css
@@ -28,9 +28,6 @@ mat-radio-button {
   display: flex;
   align-items: center;
 }
-.dv {
-  background-image: linear-gradient(180deg, #5c6bc0 0%, #3f51b5 100%);
-}
 .area {
   background-image: linear-gradient(180deg, #263238 0%, #607d8b 100%);
   color: white
@@ -48,4 +45,10 @@ mat-radio-button {
 
 ::ng-deep .mat-progress-bar {
   border-radius: 2px;
+}
+.text-warn {
+  color: #E91E63;
+}
+.text-blue {
+  color: #0d47a1;
 }
