--- a/src/app/includes/dashboard/top-navbar/top-navbar.component.html
+++ b/src/app/includes/dashboard/top-navbar/top-navbar.component.html
@@ -51,17 +51,14 @@
         <mat-icon>menu_book</mat-icon>
         <span class="menu-item-title">News Feed</span>
       </a>
-
       <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/howtopage']">
         <mat-icon>storage</mat-icon>
         <span class="menu-item-title">How To Invest</span>
       </a>
-
       <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/portfolio']">
         <mat-icon>group</mat-icon>
         <span class="menu-item-title">Portfolio</span>
       </a>
-
       <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/catalogue']">
         <mat-icon>monochrome_photos</mat-icon>
         <span class="menu-item-title">Catalogue</span>
@@ -85,6 +82,14 @@
       <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/contact']">
         <mat-icon>contact_phone</mat-icon>
         <span class="menu-item-title">Contact Us</span>
+      </a>
+      <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/article']">
+        <mat-icon>extension</mat-icon>
+        <span class="menu-item-title">New Article</span>
+      </a>
+      <a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/business']">
+        <mat-icon>shopping_cart</mat-icon>
+        <span class="menu-item-title">New Business</span>
       </a>
     </mat-nav-list>
   </mat-sidenav>
