--- a/src/app/pages/dashboard/newsfeed/newsfeed.component.html
+++ b/src/app/pages/dashboard/newsfeed/newsfeed.component.html
@@ -38,7 +38,11 @@
         <mat-card>
           <mat-card-header>Content</mat-card-header>
           <mat-divider></mat-divider>
-          {{thisArticle['section1']}}
+          <mat-card-content>
+            <p class="mt-2">
+              {{thisArticle['section1']}}
+            </p>
+          </mat-card-content>
         </mat-card>
       </div>
       <div class="col-md-6">
@@ -52,7 +56,11 @@
         <mat-card>
           <mat-card-header>Content</mat-card-header>
           <mat-divider></mat-divider>
-          {{thisArticle['section2']}}
+          <mat-card-content>
+            <p class="mt-2">
+              {{thisArticle['section2']}}
+            </p>
+          </mat-card-content>
         </mat-card>
       </div>
     </div>
