--- a/src/app/includes/dashboard/top-navbar/top-navbar.component.css
+++ b/src/app/includes/dashboard/top-navbar/top-navbar.component.css
@@ -116,7 +116,8 @@ mat-sidenav:not(.mat-drawer-opened) .menu-item-title {
 .avatar {
   width: 48px;
   height: 48px;
-  margin: 22px 14px;
+  border-radius: 50%;
+  cursor: pointer;
 }
 .d-flex .mat-card-header {
   font-size: 14px;
