--- a/src/app/pages/dashboard/aboutus/aboutus.component.html
+++ b/src/app/pages/dashboard/aboutus/aboutus.component.html
@@ -45,19 +45,35 @@
         </mat-panel-description>
       </mat-expansion-panel-header>
       <div class="row">
-        <div class="col-md-4 col-sm-12 my-4" *ngFor="let carddata of rowData">
-          <mat-card (click)="updateCard(carddata)" class="custom-mat-card">
-            <img [src]="carddata.imgurl" class="custom-card-img" alt="">
-            <mat-card-content>
-              <mat-card-title>{{carddata.headline}}</mat-card-title>
-              <mat-card-subtitle>{{carddata.section1}}</mat-card-subtitle>
-              <p>
-                {{carddata.section2}}
-              </p>
-            </mat-card-content>
+        <div class="col-md-4 col-sm-12" *ngFor="let card of rowData | paginate: { itemsPerPage: 3, currentPage: p }">
+          <mat-card class="about-card">
+            <button mat-flat-button color="primary" class="float-right" (click)="updateCard(card)">Edit</button>
+            <mat-card-header>
+              {{card.headline}}
+            </mat-card-header>
+            <mat-divider></mat-divider>
+            <mat-tab-group class="about-tab">
+              <mat-tab label="Section1">
+                <mat-card>
+                  <img mat-card-image [src]="card.imgurl1" alt="Article"/>
+                  <mat-card-content>
+                    <p>{{card.section1}}</p>
+                  </mat-card-content>
+                </mat-card>
+              </mat-tab>
+              <mat-tab label="Section2">
+                <mat-card>
+                  <img mat-card-image [src]="card.imgurl2" alt="Article"/>
+                  <mat-card-content>
+                    <p>{{card.section2}}</p>
+                  </mat-card-content>
+                </mat-card>
+              </mat-tab>
+            </mat-tab-group>
           </mat-card>
         </div>
       </div>
+      <pagination-controls class="pagination" (pageChange)="p = $event"></pagination-controls>
       <mat-action-row>
         <button mat-button color="warn" (click)="prevStep()">Previous</button>
         <button mat-button color="primary" (click)="nextStep()">Next</button>
