--- a/src/app/pages/dashboard/faqs/faqs.component.html
+++ b/src/app/pages/dashboard/faqs/faqs.component.html
@@ -10,17 +10,14 @@
         Type your name and age
       </mat-panel-description>
     </mat-expansion-panel-header>
-
     <mat-form-field>
       <input matInput placeholder="First name">
     </mat-form-field>
-
     <mat-form-field>
       <input matInput placeholder="Age">
     </mat-form-field>
   </mat-expansion-panel>
-  <mat-expansion-panel (opened)="panelOpenState = true"
-                       (closed)="panelOpenState = false">
+  <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
     <mat-expansion-panel-header>
       <mat-panel-title>
         Self aware panel
@@ -42,17 +39,14 @@
         Type your name and age
       </mat-panel-description>
     </mat-expansion-panel-header>
-
     <mat-form-field>
       <input matInput placeholder="First name">
     </mat-form-field>
-
     <mat-form-field>
       <input matInput placeholder="Age">
     </mat-form-field>
   </mat-expansion-panel>
-  <mat-expansion-panel (opened)="panelOpenState = true"
-                       (closed)="panelOpenState = false">
+  <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
     <mat-expansion-panel-header>
       <mat-panel-title>
         Self aware panel
@@ -74,17 +68,14 @@
         Type your name and age
       </mat-panel-description>
     </mat-expansion-panel-header>
-
     <mat-form-field>
       <input matInput placeholder="First name">
     </mat-form-field>
-
     <mat-form-field>
       <input matInput placeholder="Age">
     </mat-form-field>
   </mat-expansion-panel>
-  <mat-expansion-panel (opened)="panelOpenState = true"
-                       (closed)="panelOpenState = false">
+  <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
     <mat-expansion-panel-header>
       <mat-panel-title>
         Self aware panel
@@ -106,17 +97,14 @@
         Type your name and age
       </mat-panel-description>
     </mat-expansion-panel-header>
-
     <mat-form-field>
       <input matInput placeholder="First name">
     </mat-form-field>
-
     <mat-form-field>
       <input matInput placeholder="Age">
     </mat-form-field>
   </mat-expansion-panel>
-  <mat-expansion-panel (opened)="panelOpenState = true"
-                       (closed)="panelOpenState = false">
+  <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
     <mat-expansion-panel-header>
       <mat-panel-title>
         Self aware panel
